--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 /* ================= CONFIG ================= */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const PROMPTPAY_ID = "0936494961";
+const PROMPTPAY_ID = "0869525072 ";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 /* ================= SWEET ALERT ================= */
@@ -184,13 +184,25 @@ function addItem(p){
 
 /* ================= MIX ================= */
 function buildMixOptions(main){
+  // 👉 เมนูที่ "ไม่ให้ผสม"
+  const EXCLUDE_MIX = [
+    'แกงปู',
+    'น้ำชุปหยำ'
+  ];
+
   mixSelect.innerHTML = '<option value="">-- เลือกน้ำที่ผสม --</option>';
+
   products
-    .filter(p=>p.category==='ขนมจีน' && p.name!==main)
-    .forEach(p=>{
+    .filter(p =>
+      p.category === 'ขนมจีน' &&
+      p.name !== main &&
+      !EXCLUDE_MIX.includes(p.name)
+    )
+    .forEach(p => {
       mixSelect.innerHTML += `<option>${p.name}</option>`;
     });
 }
+
 function toggleMix(){
   mixSelect.classList.toggle('hidden', !addonMix.checked);
 }
