--- a/index.html
+++ b/index.html
@@ -8,6 +8,129 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+/* ===== Base ===== */
+body{
+  background: radial-gradient(ellipse at top, #1e293b, #020617);
+  color:#e5e7eb;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+/* ===== Header ===== */
+h1{
+  letter-spacing:.5px;
+  color:#f8fafc;
+}
+
+/* ===== Select / Input ===== */
+select, input{
+  background:#ffffff !important;
+  color:#000000 !important;
+  border:1px solid #cbd5e1;
+  font-size:16px;
+}
+
+select:focus, input:focus{
+  outline:none;
+  border-color:#22c55e;
+  box-shadow:0 0 0 2px rgba(34,197,94,.25);
+}
+
+/* ===== Category Bar ===== */
+#categoryBar button{
+  background: linear-gradient(135deg,#334155,#1e293b);
+  border:1px solid rgba(255,255,255,.08);
+  font-weight:500;
+}
+
+#categoryBar button:hover{
+  background:#475569;
+}
+
+/* ===== Menu Buttons ===== */
+#menu button{
+  background: linear-gradient(180deg,#334155,#1e293b);
+  border:1px solid rgba(255,255,255,.06);
+  font-size:15px;
+  line-height:1.4;
+  white-space:pre-line;
+}
+
+#menu button:hover{
+  background:#475569;
+  transform:translateY(-1px);
+}
+
+/* ===== Bill Box ===== */
+#bill > div{
+  background:rgba(255,255,255,.03);
+  border-radius:8px;
+  padding:6px 8px;
+}
+
+#bill button{
+  min-width:28px;
+}
+
+/* ===== Total ===== */
+#total{
+  color:#34d399;
+}
+
+/* ===== Payment Buttons ===== */
+button.bg-emerald-600{
+  background: linear-gradient(135deg,#22c55e,#16a34a);
+  font-weight:600;
+}
+
+button.bg-indigo-600{
+  background: linear-gradient(135deg,#6366f1,#4f46e5);
+  font-weight:600;
+}
+
+button.bg-red-600{
+  background: linear-gradient(135deg,#dc2626,#b91c1c);
+  font-weight:600;
+}
+
+/* ===== Modal ===== */
+#addonModal > div,
+#payModal > div{
+  box-shadow:0 20px 40px rgba(0,0,0,.6);
+  border:1px solid rgba(255,255,255,.08);
+}
+
+#addonModal h2,
+#payModal h2{
+  color:#f8fafc;
+}
+
+/* ===== Checkbox ===== */
+input[type="checkbox"]{
+  accent-color:#22c55e;
+  width:16px;
+  height:16px;
+  cursor:pointer;
+}
+
+/* ===== PromptPay QR ===== */
+#ppQR{
+  border-radius:12px;
+  background:#fff;
+  padding:8px;
+}
+
+/* ===== Scrollbar (มือถือไม่เห็น แต่ desktop สวย) ===== */
+::-webkit-scrollbar{
+  height:6px;
+  width:6px;
+}
+::-webkit-scrollbar-thumb{
+  background:#475569;
+  border-radius:4px;
+}
+</style>
+
 </head>
 
 <body class="bg-slate-900 text-white p-3 space-y-3">
