--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>🍜 POS ร้านขนมจีน</title>
+<title>🍜 BAANNAITHU</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
@@ -135,7 +135,7 @@ input[type="checkbox"]{
 
 <body class="bg-slate-900 text-white p-3 space-y-3">
 
-<h1 class="text-xl font-bold text-center">🍜 POS ร้านขนมจีน</h1>
+<h1 class="text-xl font-bold text-center">🍜 BAANNAITHU</h1>
 
 <!-- เลือกโต๊ะ -->
 <select id="tableSelect" class="w-full p-2 text-black rounded">
