--- a/index.html
+++ b/index.html
@@ -3,144 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>🍜 BAAN NAI THU</title>
+<title>🍜 POS ร้านขนมจีน</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-/* ===== Base ===== */
+
+<style>
 body{
   background: radial-gradient(ellipse at top, #1e293b, #020617);
   color:#e5e7eb;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
-
-/* ===== Header ===== */
-h1{
-  letter-spacing:.5px;
-  color:#f8fafc;
-}
-
-/* ===== Select / Input ===== */
-select, input{
-  background:#ffffff !important;
-  color:#000000 !important;
-  border:1px solid #cbd5e1;
-  font-size:16px;
-}
-
-select:focus, input:focus{
-  outline:none;
-  border-color:#22c55e;
-  box-shadow:0 0 0 2px rgba(34,197,94,.25);
-}
-
-/* ===== Category Bar ===== */
-#categoryBar button{
-  background: linear-gradient(135deg,#334155,#1e293b);
-  border:1px solid rgba(255,255,255,.08);
-  font-weight:500;
-}
-
-#categoryBar button:hover{
-  background:#475569;
-}
-
-/* ===== Menu Buttons ===== */
-#menu button{
-  background: linear-gradient(180deg,#334155,#1e293b);
-  border:1px solid rgba(255,255,255,.06);
-  font-size:15px;
-  line-height:1.4;
-  white-space:pre-line;
-}
-
-#menu button:hover{
-  background:#475569;
-  transform:translateY(-1px);
-}
-
-/* ===== Bill Box ===== */
-#bill > div{
-  background:rgba(255,255,255,.03);
-  border-radius:8px;
-  padding:6px 8px;
-}
-
-#bill button{
-  min-width:28px;
-}
-
-/* ===== Total ===== */
-#total{
-  color:#34d399;
-}
-
-/* ===== Payment Buttons ===== */
-button.bg-emerald-600{
-  background: linear-gradient(135deg,#22c55e,#16a34a);
-  font-weight:600;
-}
-
-button.bg-indigo-600{
-  background: linear-gradient(135deg,#6366f1,#4f46e5);
-  font-weight:600;
-}
-
-button.bg-red-600{
-  background: linear-gradient(135deg,#dc2626,#b91c1c);
-  font-weight:600;
-}
-
-/* ===== Modal ===== */
-#addonModal > div,
-#payModal > div{
-  box-shadow:0 20px 40px rgba(0,0,0,.6);
-  border:1px solid rgba(255,255,255,.08);
-}
-
-#addonModal h2,
-#payModal h2{
-  color:#f8fafc;
-}
-
-/* ===== Checkbox ===== */
-input[type="checkbox"]{
-  accent-color:#22c55e;
-  width:16px;
-  height:16px;
-  cursor:pointer;
-}
-
-/* ===== PromptPay QR ===== */
-#ppQR{
-  border-radius:12px;
-  background:#fff;
-  padding:8px;
-}
-
-/* ===== Scrollbar (มือถือไม่เห็น แต่ desktop สวย) ===== */
-::-webkit-scrollbar{
-  height:6px;
-  width:6px;
-}
-::-webkit-scrollbar-thumb{
-  background:#475569;
-  border-radius:4px;
-}
+select,input{ color:#000 }
 </style>
-
 </head>
 
-<body class="bg-slate-900 text-white p-3 space-y-3">
+<body class="p-3 space-y-3">
 
-<h1 class="text-xl font-bold text-center">🍜 BAAN NAI THU</h1>
+<h1 class="text-xl font-bold text-center">🍜 POS ร้านขนมจีน</h1>
 
 <!-- เลือกโต๊ะ -->
-<select id="tableSelect" class="w-full p-2 text-black rounded">
-  <option value="">-- เลือกโต๊ะ --</option>
-</select>
+<select id="tableSelect" class="w-full p-2 rounded"></select>
 
 <!-- หมวด -->
 <div id="categoryBar" class="flex gap-2 overflow-x-auto"></div>
@@ -151,8 +34,8 @@ input[type="checkbox"]{
 <!-- บิล -->
 <div class="bg-slate-800 p-3 rounded">
   <div id="bill"></div>
-  <div class="border-t border-slate-600 mt-2 pt-2 text-lg font-bold">
-    รวม: <span id="total">0</span> บาท
+  <div class="border-t mt-2 pt-2 font-bold">
+    รวม: <span id="total" class="text-emerald-400">0</span> บาท
   </div>
 </div>
 
@@ -166,354 +49,174 @@ input[type="checkbox"]{
   ❌ ยกเลิกออเดอร์
 </button>
 
-<!-- ================= MODAL ขนมจีน ================= -->
-<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80">
-    <h2 id="addonTitle" class="font-bold mb-2 text-center"></h2>
-
-    <label class="block">
-      <input type="checkbox" id="addonSpecial"> พิเศษ +10
-    </label>
-
-    <label class="block mt-1">
-      <input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10
-    </label>
-
-    <select id="mixSelect" class="w-full text-black mt-1 hidden"></select>
-
-    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
-      เพิ่มลงบิล
-    </button>
-
-    <button onclick="closeAddon()" class="mt-2 bg-slate-600 w-full py-1 rounded">
-      ยกเลิก
-    </button>
-  </div>
-</div>
-
-<!-- ================= MODAL ชำระเงิน ================= -->
-<div id="payModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80">
-    <h2 id="payTitle" class="font-bold mb-2 text-center"></h2>
-
-    <div id="transferBox" class="hidden text-center">
-      <img id="ppQR" class="mx-auto w-56 mb-2">
-      <button onclick="confirmPay('transfer')" class="bg-indigo-600 w-full py-2 rounded">
-        ยืนยันรับโอน
-      </button>
-    </div>
-
-    <div id="cashBox" class="hidden">
-      <input id="cashInput" type="number"
-        class="w-full p-2 text-black rounded mb-2"
-        placeholder="รับเงิน"
-        oninput="calcChange()">
-      เงินทอน: <span id="changeText">0</span> บาท
-      <button onclick="confirmPay('cash')" class="mt-2 bg-emerald-600 w-full py-2 rounded">
-        ยืนยันรับเงิน
-      </button>
-    </div>
-
-    <button onclick="closePay()" class="mt-3 bg-red-600 w-full py-1 rounded">
-      ยกเลิก
-    </button>
-  </div>
-</div>
-
 <script>
 /* ================= CONFIG ================= */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const PROMPTPAY_ID = "0869525072";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-/* ================= SWEET ALERT ================= */
-const Toast = Swal.mixin({
-  toast:true,
-  position:'top-end',
-  showConfirmButton:false,
-  timer:1500,
-  background:'#1e293b',
-  color:'#fff'
-});
-
 /* ================= STATE ================= */
-let categories = [];
-let products = [];
-let tables = [];
-let cart = [];
-let currentProduct = null;
+let categories=[], products=[], tables=[];
+let cart=[];
+let currentOrderId=null;
 
 /* ================= INIT ================= */
+init();
 async function init(){
-  categories = (await db.from('categories').select('*')).data || [];
-  products   = (await db.from('products').select('*').eq('active',true)).data || [];
-  tables     = (await db.from('tables').select('*').eq('active',true)).data || [];
+  categories=(await db.from('categories').select()).data||[];
+  products=(await db.from('products').select().eq('active',true)).data||[];
+  tables=(await db.from('tables').select().eq('active',true)).data||[];
 
   renderCategories();
-  if(categories.length) loadCategory(categories[0].name);
-  loadTables();
+  if(categories[0]) loadCategory(categories[0].name);
+  await loadTables();
 }
 
-/* ================= TABLES ================= */
-function loadTables(){
-  tableSelect.innerHTML = '<option value="">-- เลือกโต๊ะ --</option>';
+/* ================= TABLE ================= */
+async function loadTables(){
+  tableSelect.innerHTML='<option value="">-- เลือกโต๊ะ --</option>';
+
+  const { data: openOrders } = await db
+    .from('orders')
+    .select('id,table_id')
+    .eq('status','open');
+
+  const busyMap = {};
+  openOrders.forEach(o=>busyMap[o.table_id]=o.id);
+
   tables.forEach(t=>{
-    tableSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
+    const busy = busyMap[t.id];
+    tableSelect.innerHTML += `
+      <option value="${t.id}" ${busy?'disabled':''}>
+        ${t.name} ${busy?'(กำลังใช้งาน)':''}
+      </option>`;
   });
+
+  tableSelect.onchange = async ()=>{
+    const tableId = tableSelect.value;
+    if(!tableId) return;
+
+    const orderId = busyMap[tableId];
+    if(orderId){
+      await loadOpenOrder(orderId);
+    }else{
+      cart=[]; currentOrderId=null;
+      renderBill();
+    }
+  };
 }
 
-/* ================= CATEGORY ================= */
+/* ================= LOAD OPEN BILL ================= */
+async function loadOpenOrder(orderId){
+  const { data: items } = await db
+    .from('order_items')
+    .select('*')
+    .eq('order_id',orderId);
+
+  currentOrderId = orderId;
+  cart = items.map(i=>({
+    name:i.product_name,
+    price:i.price,
+    qty:i.qty
+  }));
+  renderBill();
+}
+
+/* ================= CATEGORY / MENU ================= */
 function renderCategories(){
-  categoryBar.innerHTML = '';
+  categoryBar.innerHTML='';
   categories.forEach(c=>{
-    const btn = document.createElement('button');
-    btn.className = 'bg-slate-700 px-4 py-2 rounded whitespace-nowrap';
-    btn.innerText = c.name;
-    btn.onclick = () => loadCategory(c.name);
-    categoryBar.appendChild(btn);
+    const b=document.createElement('button');
+    b.className='bg-slate-700 px-4 py-2 rounded';
+    b.innerText=c.name;
+    b.onclick=()=>loadCategory(c.name);
+    categoryBar.appendChild(b);
   });
 }
 
 function loadCategory(cat){
-  menu.innerHTML = '';
+  menu.innerHTML='';
   products.filter(p=>p.category===cat).forEach(p=>{
-    const b = document.createElement('button');
-    b.className = 'bg-slate-700 p-3 rounded';
-    b.innerText = `${p.name}\n${p.price} บาท`;
-    b.onclick = ()=>addItem(p);
+    const b=document.createElement('button');
+    b.className='bg-slate-700 p-3 rounded';
+    b.innerText=`${p.name}\n${p.price} บาท`;
+    b.onclick=()=>addItem(p);
     menu.appendChild(b);
   });
 }
 
-/* ================= ADD ITEM ================= */
+/* ================= CART ================= */
 function addItem(p){
-  if(p.category === 'ขนมจีน'){
-    currentProduct = p;
-    addonTitle.innerText = `${p.name} (${p.price})`;
-    buildMixOptions(p.name);
-    addonModal.classList.replace('hidden','flex');
-    return;
-  }
-
-  const found = cart.find(i=>i.name===p.name);
-  if(found){
-    found.qty++;
-  }else{
-    cart.push({ name:p.name, price:p.price, qty:1 });
-  }
+  const f=cart.find(i=>i.name===p.name);
+  f?f.qty++:cart.push({name:p.name,price:p.price,qty:1});
   renderBill();
 }
 
-/* ================= MIX ================= */
-function buildMixOptions(main){
-  // 👉 เมนูที่ "ไม่ให้ผสม"
-  const EXCLUDE_MIX = [
-    'แกงปู',
-    'น้ำชุปหยำ'
-  ];
-
-  mixSelect.innerHTML = '<option value="">-- เลือกน้ำที่ผสม --</option>';
-
-  products
-    .filter(p =>
-      p.category === 'ขนมจีน' &&
-      p.name !== main &&
-      !EXCLUDE_MIX.includes(p.name)
-    )
-    .forEach(p => {
-      mixSelect.innerHTML += `<option>${p.name}</option>`;
-    });
-}
-
-function toggleMix(){
-  mixSelect.classList.toggle('hidden', !addonMix.checked);
-}
-
-/* ================= CONFIRM ADDON ================= */
-function confirmAddon(){
-  let name = currentProduct.name;
-  let price = currentProduct.price;
-  let detail = [];
-
-  if(addonSpecial.checked){
-    price += 10;
-    detail.push('พิเศษ');
-  }
-
-  if(addonMix.checked){
-    if(!mixSelect.value){
-      Swal.fire({ icon:'info', title:'กรุณาเลือกน้ำที่ผสม' });
-      return;
-    }
-    price += 10;
-    detail.push(`ผสมน้ำ:${mixSelect.value}`);
-  }
-
-  if(detail.length) name += ` (${detail.join(', ')})`;
-
-  const found = cart.find(i=>i.name===name);
-  if(found){
-    found.qty++;
-  }else{
-    cart.push({ name, price, qty:1 });
-  }
-
-  closeAddon();
-  renderBill();
-}
-
-function closeAddon(){
-  addonModal.classList.replace('flex','hidden');
-  addonSpecial.checked = false;
-  addonMix.checked = false;
-  mixSelect.classList.add('hidden');
-  mixSelect.value = '';
-}
-
-/* ================= BILL ================= */
 function renderBill(){
-  bill.innerHTML = '';
-  let sum = 0;
-
-  cart.forEach((i, idx)=>{
-    const row = document.createElement('div');
-    row.className = 'flex items-center gap-2 border-b border-slate-700 py-1';
-
-    row.innerHTML = `
-      <div class="flex-1 text-sm">${i.name}</div>
-
-      <div class="flex items-center gap-1">
-        <button class="bg-slate-600 px-2 rounded"
-          onclick="changeQty(${idx}, -1)">−</button>
-        <span>${i.qty}</span>
-        <button class="bg-slate-600 px-2 rounded"
-          onclick="changeQty(${idx}, 1)">+</button>
-      </div>
-
-      <div class="w-16 text-right text-sm">
-        ${i.price * i.qty}
-      </div>
-
-      <button class="text-red-500 px-2"
-        onclick="removeItem(${idx})">✕</button>
-    `;
-
-    bill.appendChild(row);
-    sum += i.price * i.qty;
+  bill.innerHTML='';
+  let sum=0;
+  cart.forEach((i,idx)=>{
+    bill.innerHTML+=`
+      <div class="flex justify-between border-b py-1">
+        <span>${i.name} × ${i.qty}</span>
+        <span>${i.price*i.qty}</span>
+        <button onclick="removeItem(${idx})">✕</button>
+      </div>`;
+    sum+=i.price*i.qty;
   });
-
-  total.innerText = sum;
+  total.innerText=sum;
 }
 
-function changeQty(index, diff){
-  cart[index].qty += diff;
-  if(cart[index].qty <= 0){
-    cart.splice(index, 1);
-  }
-  renderBill();
-}
-
-function removeItem(index){
-  cart.splice(index, 1);
+function removeItem(i){
+  cart.splice(i,1);
   renderBill();
 }
 
 /* ================= PAYMENT ================= */
-function checkout(type){
-  if(!cart.length){
-    Toast.fire({ icon:'info', title:'ยังไม่มีรายการ' });
-    return;
-  }
-  if(!tableSelect.value){
-    Swal.fire({ icon:'warning', title:'กรุณาเลือกโต๊ะ' });
-    return;
-  }
+async function checkout(type){
+  if(!cart.length||!tableSelect.value) return;
 
-  const sum = cart.reduce((s,i)=>s + i.price*i.qty, 0);
-  payModal.classList.replace('hidden','flex');
-  cashBox.classList.add('hidden');
-  transferBox.classList.add('hidden');
+  let sum=cart.reduce((s,i)=>s+i.price*i.qty,0);
 
-  if(type==='transfer'){
-    payTitle.innerText = `โอน ${sum} บาท`;
-    transferBox.classList.remove('hidden');
-    ppQR.src = `https://promptpay.io/${PROMPTPAY_ID}/${sum.toFixed(2)}.png`;
+  if(!currentOrderId){
+    const { data:o }=await db.from('orders')
+      .insert({table_id:tableSelect.value,total:sum,payment:type,status:'open'})
+      .select().single();
+    currentOrderId=o.id;
   }else{
-    payTitle.innerText = `เงินสด ${sum} บาท`;
-    cashBox.classList.remove('hidden');
-    cashInput.value = '';
-    changeText.innerText = '0';
+    await db.from('order_items').delete().eq('order_id',currentOrderId);
+    await db.from('orders').update({total:sum,payment:type}).eq('id',currentOrderId);
   }
-}
-
-function calcChange(){
-  const sum = cart.reduce((s,i)=>s + i.price*i.qty, 0);
-  changeText.innerText = cashInput.value - sum;
-}
-
-async function confirmPay(type){
-  const sum = cart.reduce((s,i)=>s + i.price*i.qty, 0);
-
-  if(type==='cash' && Number(cashInput.value) < sum){
-    Swal.fire({ icon:'error', title:'รับเงินไม่พอ' });
-    return;
-  }
-
-  const { data: order } = await db.from('orders')
-    .insert({
-      total: sum,
-      payment: type,
-      table_id: tableSelect.value
-    })
-    .select()
-    .single();
 
   for(const i of cart){
     await db.from('order_items').insert({
-      order_id: order.id,
-      product_name: i.name,
-      price: i.price,
-      qty: i.qty
+      order_id:currentOrderId,
+      product_name:i.name,
+      price:i.price,
+      qty:i.qty
     });
   }
 
- cart = [];
-renderBill();
-tableSelect.value = '';   // ✅ รีเซ็ตโต๊ะ
-closePay();
+  await db.from('orders').update({status:'paid'}).eq('id',currentOrderId);
 
-Swal.fire({
-  icon:'success',
-  title:'บันทึกบิลเรียบร้อย',
-  timer:1200,
-  showConfirmButton:false
-});
-
+  resetAll();
 }
 
-function closePay(){
-  payModal.classList.replace('flex','hidden');
-}
-
+/* ================= CANCEL ================= */
 async function cancelOrder(){
-  if(!cart.length) return;
-  const r = await Swal.fire({
-    title:'ยกเลิกออเดอร์?',
-    showCancelButton:true,
-    confirmButtonText:'ยกเลิก',
-    cancelButtonText:'ไม่ยกเลิก'
-  });
-  if(!r.isConfirmed) return;
-
-  cart = [];
-  renderBill();
-  closePay();
-  Toast.fire({ icon:'success', title:'ยกเลิกออเดอร์แล้ว' });
+  if(!currentOrderId) return;
+  await db.from('order_items').delete().eq('order_id',currentOrderId);
+  await db.from('orders').delete().eq('id',currentOrderId);
+  resetAll();
 }
 
-/* ================= START ================= */
-init();
+/* ================= RESET ================= */
+async function resetAll(){
+  cart=[]; currentOrderId=null;
+  renderBill();
+  tableSelect.value='';
+  await loadTables();
+}
 </script>
 
 </body>
